@@ -320,6 +320,9 @@ class MemcachedCache(BaseCache):
             key = self.key_prefix + key
         return key
 
+    def _normalize_timeout(self, timeout):
+        return int(time()) + timeout
+
     def get(self, key):
         key = self._normalize_key(key)
         # memcached doesn't support keys longer than that.  Because often
@@ -352,12 +355,14 @@ class MemcachedCache(BaseCache):
         if timeout is None:
             timeout = self.default_timeout
         key = self._normalize_key(key)
+        timeout = self._normalize_timeout(timeout)
         self._client.add(key, value, timeout)
 
     def set(self, key, value, timeout=None):
         if timeout is None:
             timeout = self.default_timeout
         key = self._normalize_key(key)
+        timeout = self._normalize_timeout(timeout)
         self._client.set(key, value, timeout)
 
     def get_many(self, *keys):
@@ -371,6 +376,7 @@ class MemcachedCache(BaseCache):
         for key, value in _items(mapping):
             key = self._normalize_key(key)
             new_mapping[key] = value
+        timeout = self._normalize_timeout(timeout)
         self._client.set_multi(new_mapping, timeout)
 
     def delete(self, key):
